--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 										<h2>Contact</h2>										
 									</div>									
 								</header>	
-								<form action="process.php" method="POST">
+								<form action="https://formspree.io/f/xjvqrjee" method="POST">
 									<label for="name">Name:</label>
 									<input type="text" id="name" name="name" required>
 									
