--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+		<meta http-equiv='cache-control' content='no-cache'> 
+		<meta http-equiv='expires' content='0'> 
+		<meta http-equiv='pragma' content='no-cache'>
 	</head>
 	<body class="is-preload">
 
@@ -23,7 +26,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="projects.html">Projects</a></li>
-								<li><a href="resume.html">Resume</a></li>
+								<li><a href="https://drkulkarni236.github.io/Resume/Deva_Kulkarni.pdf" download="Deva_Kulkarni.pdf">Resume</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
@@ -71,6 +74,7 @@
 										<h2>Contact</h2>										
 									</div>									
 								</header>	
+								
 								<form action="https://formspree.io/f/xjvqrjee" method="POST">
 									<label for="name">Name:</label>
 									<input type="text" id="name" name="name" required>
