--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="projects.html">Projects</a></li>
-								<li><a href="resume.html">Resume</a></li>
+								<li><a href="https://drkulkarni236.github.io/Resume/Deva_Kulkarni.pdf" download="Deva_Kulkarni.pdf">Resume</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
