--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,15 @@
 		<meta http-equiv='expires' content='0'> 
 		<meta http-equiv='pragma' content='no-cache'>
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-84DBHSRQ65"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-84DBHSRQ65');
+	</script>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
