--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,15 @@
 		
 
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-84DBHSRQ65"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-84DBHSRQ65');
+	</script>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -112,7 +121,7 @@
 									  <h3><a href="project-nlp.html">Hate speech detection in Hinglish and korean</a></h3>
 									  <p>
 										<ul>
-											<li>Conducted comparative analysis of transformer-based language models (mBERT and LaBSE) for hate speech detection in Hinglish and Korean social media. Conducted error analysis to determine model suitability for specific languages. Assessed transfer learning and explored language translation for improved model performance.</li>
+											<li>Conducted comparative analysis of transformer-based language models (mBERT and LaBSE) for hate speech detection in Hinglish and Korean social media. Conducted error analysis to determine model suitability for specific languages. Assessed transfer learning and explored language translation for improved model performance.  </li>
 											<li>Technologies: Python, Keras, Tensorflow   </li>
 										  </ul>
 										</p>
