google analytics tags

--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,14 @@
 
 	</head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-84DBHSRQ65"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4724G977P7"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'G-84DBHSRQ65');
+	gtag('config', 'G-4724G977P7');
 	</script>
 	<body class="is-preload">
 
@@ -161,7 +162,7 @@
 								<div class="project">
 									<div class="project-img">	
 										<a href="project-EXP.html">									
-											<img src="images/CV_Logo.png" alt="Project Image">	
+											<img src="images/EXP_Logo.png" alt="Project Image">	
 										</a>										
 									</div>									
 									
@@ -169,8 +170,8 @@
 									  <h3><a href="project-EXP.html">Experiment: Motivating altristic behavior</a></h3>
 									  <p>
 										<ul>
-											<li>Implemented computer vision methods to classify pistachio images, with a primary emphasis on manual feature extraction through numpy array manipulation. Employed dimensionality reduction via PCA and outlier detection using t-SNE. Explored multiple machine learning algorithms for model optimization and conducted in-depth analysis of model outputs and errors.</li>
-											<li>Technologies: NumPy, Sklearn, OpenCV, Tensorflow   </li>
+											<li></li>
+											<li>Technologies:    </li>
 										  </ul>
 										</p>
 									</div>
