--- a/project-windsmart.html
+++ b/project-windsmart.html
@@ -16,13 +16,14 @@
 
 	</head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-84DBHSRQ65"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4724G977P7"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'G-84DBHSRQ65');
+	gtag('config', 'G-4724G977P7');
 	</script>
 	<body class="is-preload">
 
