--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
 									</div>									
 									
 									<div class="project-details">
-									  <h3><a href="project-nlp.html">Hate speech detection in Hindi and korean</a></h3>
+									  <h3><a href="project-nlp.html">Hate speech detection in Hinglish and korean</a></h3>
 									  <p>
 										<ul>
 											<li>Conducted comparative analysis of transformer-based language models (mBERT and LaBSE) for hate speech detection in Hinglish and Korean social media. Conducted error analysis to determine model suitability for specific languages. Assessed transfer learning and explored language translation for improved model performance.  </li>
