--- a/project-EXP.html
+++ b/project-EXP.html
@@ -100,15 +100,15 @@
 
 									<li><strong>Task:</strong> Participants were tasked with solving five "Factor 24" puzzles of increasing complexity within a 4-minute timeframe. Each puzzle presented four 1-digit numbers, and participants were required to employ addition, subtraction, multiplication, and/or division operations to achieve a sum of 24. A financial reward served as an incentive for participants to accurately complete all puzzles within the allotted time.</li>			
 									
-									<img src="images/EXP_Task.png" alt=" " width="350" height="200"><br><br>
+									<img src="images/Exp_Task.png" alt=" " width="350" height="200"><br><br>
 
 									<li><strong>Treatment:</strong>	The treatment involved modifying the initial survey instructions. In the treatment group, the instructions included a statement highlighting the survey's benefits for elementary and middle school students. Conversely, the control group received instructions without this statement.</li>			
 									
-									<img src="images/EXP_Treatment.png" alt=" " width="700" height="200"><br><br>
+									<img src="images/Exp_Treatment.png" alt=" " width="700" height="200"><br><br>
 
 									<li><strong>Results:</strong> In the control group, participants, motivated solely by the financial reward, were more inclined to attempt all five puzzles (p-value of .099). Conversely, those in the treatment group, driven by altruistic intentions to assist students, were less likely to complete all five questions for monetary gain. They invested more time in each puzzle, striving for accurate solutions to benefit the students. However, we did not observe any difference in the accuracy of solving the puzzles between the groups. </li>
 
-									<img src="images/EXP_Result.png" alt=" " width="500" height="300"><br><br>
+									<img src="images/Exp_Result.png" alt=" " width="500" height="300"><br><br>
 
 									<li><strong>Future Enhancements: </strong> 
 										<ul>
