--- a/project-CV.html
+++ b/project-CV.html
@@ -72,7 +72,7 @@
 									
 								Teammates: <a href='https://www.linkedin.com/in/blake-bormes/' target="_blank"> Blake Bormes</a>, <a href='https://www.linkedin.com/in/albert-yu-j-24a91815b/' target="_blank"> Albert (Yu) Jiang</a>. <br> 
 								
-								Links:  <a href="https://drkulkarni236.github.io/Folder/Hate Speech Detection in Hinglish and Korean Media.pdf" target="_blank">NEED TO ADD NOTEBOOK</a> </p>
+								Links:  <a href="https://github.com/drkulkarni236/Portfolio/blob/master/Image_Classification_Pistachios/W281_Final_Project_Report.ipynb" target="_blank">Report Notebook</a>, <a href="https://github.com/drkulkarni236/Portfolio/blob/master/Image_Classification_Pistachios/" target="_blank">Git Repo</a> </p>
 
 
 								<h2>Skills Demonstrated</h2>
