--- a/project-Tweets.html
+++ b/project-Tweets.html
@@ -72,7 +72,7 @@
 									
 								Teammates: <a href='https://www.ischool.berkeley.edu/people/mili-gera' target="_blank"> Mili Gera</a>, <a href='https://www.linkedin.com/in/matthewwhittaker2/' target="_blank"> Matt Whittaker</a>, <a href='https://www.linkedin.com/in/heesukjang/' target="_blank"> Heesuk Jang</a>. <br> 
 								
-								Links:  <a href="https://docs.google.com/presentation/d/1KUQ5MgEP9XlQ4T7hHF8E2EuonLKJQbnD/edit#slide=id.p2" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.github.io/Folder/Lab2_Final_Report.pdf" target="_blank">[NEED TO ADD NOTEBOOK]</a> </p>
+								Links:  <a href="https://docs.google.com/presentation/d/1KUQ5MgEP9XlQ4T7hHF8E2EuonLKJQbnD/edit#slide=id.p2" target="_blank">[Slide Deck]</a>, <a href="https://github.com/drkulkarni236/Portfolio/blob/master/Real_Time_Data_Streaming_Twitter/Final_Report.ipynb" target="_blank">[Report Notebook]</a>, <a href="https://github.com/drkulkarni236/Portfolio/tree/master/Real_Time_Data_Streaming_Twitter" target="_blank">[Git Repo]</a> </p>
 
 
 								<h2>Skills Demonstrated</h2>
