--- a/project-nlp.html
+++ b/project-nlp.html
@@ -72,7 +72,7 @@
 									
 								Teammates: <a href='https://www.linkedin.com/in/rebecca-hile-72164254/' target="_blank"> Jared Dec</a>, <a href='https://www.ischool.berkeley.edu/people/mili-gera' target="_blank"> Mili Gera</a>. <br> 
 								
-								Links: <a href="https://docs.google.com/presentation/d/1CtaT2JOLWK6O2f8EYzuSjFYfZNZ3M3eD2B1_eXcejLQ/edit#slide=id.g121b855d9ff_5_323" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.github.io/Folder/Hate Speech Detection in Hinglish and Korean Media.pdf" target="_blank">[Paper]</a> </p>
+								Links: <a href="https://docs.google.com/presentation/d/1CtaT2JOLWK6O2f8EYzuSjFYfZNZ3M3eD2B1_eXcejLQ/edit#slide=id.g121b855d9ff_5_323" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.github.io/Folder/Hate Speech Detection in Hinglish and Korean Media.pdf" target="_blank">[Paper]</a>, <a href="https://github.com/drkulkarni236/Portfolio/tree/master/Hate_Speech_Detection_in_Hinglish_and_Korean" target="_blank">[Git Repo]</a> </p>
 
 
 								<h2>Skills Demonstrated</h2>
