--- a/project-windsmart.html
+++ b/project-windsmart.html
@@ -73,7 +73,7 @@
 									
 								Teammates: <a href='https://www.linkedin.com/in/rebecca-hile-72164254/' target="_blank"> Rebecca Hile</a>, <a href='https://www.linkedin.com/in/luis-garc%C3%ADa-lizar%C3%A1n-b57ab285/' target="_blank"> Luis García Lizarán</a>, <a href='https://www.linkedin.com/in/joseph-houck/' target="_blank">Joe Huock</a>. <br> 
 								
-								Links: <a href="https://docs.google.com/presentation/d/1Jyw1UQhCwNXZe1iPKIRvVz4IAFNiA57UbfKIe_Mny7Q/edit#slide=id.g25506434d92_0_21" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.wixsite.com/windsmart" target="_blank">[Landing Page], <a href="https://www.youtube.com/watch?v=Iq7KuyT3Qwk" target="_blank">[Demo]</a> </p>
+								Links: <a href="https://docs.google.com/presentation/d/1Jyw1UQhCwNXZe1iPKIRvVz4IAFNiA57UbfKIe_Mny7Q/edit#slide=id.g25506434d92_0_21" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.wixsite.com/windsmart" target="_blank">[Landing Page], <a href="https://www.youtube.com/watch?v=Iq7KuyT3Qwk" target="_blank">[Demo]</a>, <a href="https://github.com/drkulkarni236/Portfolio/tree/master/WindSmart_Wind_Turbine_Failure_Prediction" target="_blank">[Git Repo]</a>  </p>
 
 								<h2>Skills Demonstrated</h2>
 
