--- a/project-Stats.html
+++ b/project-Stats.html
@@ -72,7 +72,7 @@
 									
 								Teammates: <a href='https://www.linkedin.com/in/tiantian-zhao-kl/' target="_blank"> Tiantian Zhao</a>, <a href='https://www.linkedin.com/in/yuqiao-chen/' target="_blank"> Yuqiao Chen</a>. <br> 
 								
-								Links:  <a href="https://docs.google.com/presentation/d/1-IRwi_yjs5xftAJzWrvBwPGV1p7_9ANi/edit#slide=id.p1" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.github.io/Folder/Lab2_Final_Report.pdf" target="_blank">[Final Report]</a>, <a href="https://github.com/drkulkarni236/Portfolio/tree/master/Regression_Analysis_Mask_Use_Covid_19" target="_blank">[Git Repo] </p>
+								Links:  <a href="https://docs.google.com/presentation/d/1-IRwi_yjs5xftAJzWrvBwPGV1p7_9ANi/edit#slide=id.p1" target="_blank">[Slide Deck]</a>, <a href="https://drkulkarni236.github.io/Folder/Lab2_Final_Report.pdf" target="_blank">[Final Report]</a>, <a href="https://github.com/drkulkarni236/Portfolio/tree/master/Regression_Analysis_Mask_Use_Covid_19" target="_blank">[Git Repo]</a> </p>
 
 
 								<h2>Skills Demonstrated</h2>
