--- a/projects.html
+++ b/projects.html
@@ -189,7 +189,7 @@
 										<h3><a href="project-Stats.html">Regression Analysis: mask-use and covid-19 cases</a></h3>
 										<p>
 										<ul>
-											<li>Conducted a data-driven investigation into the relationship between mask usage and COVID-19 case numbers across U.S. counties. Identified relevant covariates and proposed a causal pathway to the outcome variable. Evaluated multiple regression models using R and interpreted the significance of coefficient estimates. Assessed the validity of model assumptions and conducted omitted variable bias analysis.</li>
+											<li>Conducted a data-driven investigation into the relationship between mask usage and COVID-19 case numbers across U.S. counties. Identified relevant covariates and proposed a causal pathway to the outcome variable. Evaluated multiple regression models using R and interpreted the significance of coefficient estimates. Assessed the validity of model assumptions and critically analyzed limitations.</li>
 											<li>Technologies: R  </li>
 											</ul>
 										</p>
